--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sign-up-form</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
 </head>
+
 <body>
-    <h1>form</h1>
+    <!-- ill try using only flexbox like a good boy :)-->
+    <div class="content">
+
+        <div class="left">
+            <div class="logo">
+                <img src="./odin-lined.png" alt="logo-img">
+                <h1>SITO BELLO</h1>
+            </div>
+        </div>
+
+        <div class="right">
+            <div class="dummy-text">
+                <div>This is not a real online service! You know you need something like this in your life to help you
+                    realize
+                    your deepest dreams.</div>
+                <div>Sign up now to get started.</div>
+                <div>You know you want to.</div>
+                <h3>Let's do this</h3>
+            </div>
+            <form action="" method="post" class="form">
+                <div>
+                    <label for="name">FIRST NAME</label>
+                    <input type="text" name="name" id="name" required>
+                </div>
+                <div>
+                    <label for="name">LAST NAME</label>
+                    <input type="text" name="last-name" id="last-name" required>
+                </div>
+                <div>
+                    <label for="email">EMAIL</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+                <div>
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input type="number" name="phone-number" id="phone-number" required>
+                </div>
+                <div>
+                    <label for="password">PASSWORD</label>
+                    <input type="password" name="password" id="password" required>
+                </div>
+                <div>
+                    <label for="confirm-password">CONFIRM PASSWORD</label>
+                    <input type="password" name="confirm-password" id="confirm-password" required>
+                </div>
+                <div>
+                    <input type="submit" value="Create account">
+                </div>
+            </form>
+            <div class="log-in">already have an account? Log in</div>
+        </div>
+    </div>
+
 </body>
+
 </html>
