--- a/index.html
+++ b/index.html
@@ -16,51 +16,60 @@
 
         <div class="left">
             <div class="logo">
-                <img src="./odin-lined.png" alt="logo-img">
-                <h1>SITO BELLO</h1>
+                <img src="./odin-lined.png" alt="logo-img" class="odin">
+                <h1>SignUp</h1>
             </div>
         </div>
 
         <div class="right">
             <div class="dummy-text">
-                <div>This is not a real online service! You know you need something like this in your life to help you
-                    realize
-                    your deepest dreams.</div>
-                <div>Sign up now to get started.</div>
-                <div>You know you want to.</div>
-                <h3>Let's do this</h3>
+                <h1>This is not a real online service!</h1>
+                <p> ipsum dolor sit amet consectetur adipisicing elit. Ea, tempora?</p>
+                <p>You know you need something like this in your life to help you realize
+                    your deepest dreams.</p>
+                <p>Sign up <em>now</em> to get started.</p>
+                <p class="remote-text">You <em>know</em> you want to.</p>
             </div>
             <form action="" method="post" class="form">
-                <div>
-                    <label for="name">FIRST NAME</label>
-                    <input type="text" name="name" id="name" required>
+                <div class="form-title">Let's do this!</div>
+                <div class="form-input">
+                    <div class="form-details">
+                        <label for="name">FIRST NAME</label>
+                        <input type="text" name="name" id="name" required>
+                    </div>
+                    <div class="form-details">
+                        <label for="lastname">LAST NAME</label>
+                        <input type="text" name="last-name" id="last-name" required>
+                    </div>
                 </div>
-                <div>
-                    <label for="name">LAST NAME</label>
-                    <input type="text" name="last-name" id="last-name" required>
+                <div class="form-input">
+                    <div class="form-details">
+                        <label for="email">EMAIL</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="form-details">
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="number" name="phone-number" id="phone-number" required>
+                    </div>
                 </div>
-                <div>
-                    <label for="email">EMAIL</label>
-                    <input type="email" name="email" id="email" required>
+                <div class="form-input">
+                    <div class="form-details">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" name="password" id="password" required>
+                    </div>
+                    <div class="form-details">
+                        <label for="confirm-password">CONFIRM PASSWORD</label>
+                        <input type="password" name="confirm-password" id="confirm-password" required>
+                    </div>
                 </div>
-                <div>
-                    <label for="phone-number">PHONE NUMBER</label>
-                    <input type="number" name="phone-number" id="phone-number" required>
-                </div>
-                <div>
-                    <label for="password">PASSWORD</label>
-                    <input type="password" name="password" id="password" required>
-                </div>
-                <div>
-                    <label for="confirm-password">CONFIRM PASSWORD</label>
-                    <input type="password" name="confirm-password" id="confirm-password" required>
-                </div>
-                <div>
-                    <input type="submit" value="Create account">
+                <div class="form-button">
+                    <button type="submit">Create account</button>
                 </div>
             </form>
-            <div class="log-in">already have an account? Log in</div>
-        </div>
+            <div class="log-in"><p>Already have an account?</p><a href="#">Log in</a></div>
+       
+              </div>
+
     </div>
 
 </body>
