--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
                     <button type="submit">Create account</button>
                 </div>
             </form>
-            <div class="log-in"><p>Already have an account?</p><a href="#">Log in</a></div>
-       
-              </div>
+            <div class="log-in">
+                <p>Already have an account?</p><a href="#">Log in</a>
+            </div>
+
+        </div>
 
     </div>
 
